--- a/Social-meadia/package.json
+++ b/Social-meadia/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "vite-app1",
+  "name": "social-meadia",
   "private": true,
   "version": "0.0.0",
   "type": "module",
@@ -11,10 +11,10 @@
   },
   "dependencies": {
     "bootstrap": "^5.3.3",
-    "react": "^18.2.0",
+    "dom": "^0.0.3",
+    "react": "^18.3.1",
     "react-dom": "^18.2.0",
-    "react-icons": "^5.2.1",
-    "react-router-dom": "^6.23.0"
+    "react-router-dom": "^6.24.0"
   },
   "devDependencies": {
     "@types/react": "^18.2.66",
